VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc17Down.err
[8MB/455MB][  1%][>                                                 ][2MB/s]  [16MB/455MB][  3%][=>                                                ][2.667MB/s]  [24MB/455MB][  5%][==>                                               ][3MB/s]  [32MB/455MB][  7%][===>                                              ][3.556MB/s]  [40MB/455MB][  8%][====>                                             ][4MB/s]  [48MB/455MB][ 10%][=====>                                            ][4.364MB/s]  [56MB/455MB][ 12%][======>                                           ][4.308MB/s]  [64MB/455MB][ 14%][=======>                                          ][4.571MB/s]  [72MB/455MB][ 15%][=======>                                          ][4.8MB/s]  [80MB/455MB][ 17%][========>                                         ][5MB/s]  [88MB/455MB][ 19%][=========>                                        ][5.176MB/s]  [96MB/455MB][ 21%][==========>                                       ][5.053MB/s]  [104MB/455MB][ 22%][===========>                                      ][5.2MB/s]  [112MB/455MB][ 24%][============>                                     ][5.333MB/s]  [120MB/455MB][ 26%][=============>                                    ][5.455MB/s]  [128MB/455MB][ 28%][==============>                                   ][5.565MB/s]  [136MB/455MB][ 29%][==============>                                   ][5.44MB/s]  [144MB/455MB][ 31%][===============>                                  ][5.538MB/s]  [152MB/455MB][ 33%][================>                                 ][5.63MB/s]  [160MB/455MB][ 35%][=================>                                ][5.714MB/s]  [168MB/455MB][ 36%][==================>                               ][5.793MB/s]  [176MB/455MB][ 38%][===================>                              ][5.867MB/s]  [184MB/455MB][ 40%][====================>                             ][5.935MB/s]  [192MB/455MB][ 42%][=====================>                            ][6MB/s]  [200MB/455MB][ 43%][=====================>                            ][6.061MB/s]  [208MB/455MB][ 45%][======================>                           ][6.118MB/s]  [216MB/455MB][ 47%][=======================>                          ][6.171MB/s]  [224MB/455MB][ 49%][========================>                         ][6.222MB/s]  [232MB/455MB][ 50%][=========================>                        ][6.27MB/s]  [240MB/455MB][ 52%][==========================>                       ][6.316MB/s]  [248MB/455MB][ 54%][===========================>                      ][6.359MB/s]  [256MB/455MB][ 56%][============================>                     ][6.4MB/s]  [264MB/455MB][ 58%][=============================>                    ][6.439MB/s]  [272MB/455MB][ 59%][=============================>                    ][6.476MB/s]  [280MB/455MB][ 61%][==============================>                   ][6.512MB/s]  [288MB/455MB][ 63%][===============================>                  ][6.545MB/s]  [296MB/455MB][ 65%][================================>                 ][6.578MB/s]  [304MB/455MB][ 66%][=================================>                ][6.609MB/s]  [312MB/455MB][ 68%][==================================>               ][6.638MB/s]  [320MB/455MB][ 70%][===================================>              ][6.667MB/s]  [328MB/455MB][ 72%][====================================>             ][6.694MB/s]  [336MB/455MB][ 73%][====================================>             ][6.72MB/s]  [344MB/455MB][ 75%][=====================================>            ][6.745MB/s]  [352MB/455MB][ 77%][======================================>           ][6.769MB/s]  [360MB/455MB][ 79%][=======================================>          ][6.792MB/s]  [368MB/455MB][ 80%][========================================>         ][6.815MB/s]  [376MB/455MB][ 82%][=========================================>        ][6.836MB/s]  [384MB/455MB][ 84%][==========================================>       ][6.857MB/s]  [392MB/455MB][ 86%][===========================================>      ][6.877MB/s]  [400MB/455MB][ 87%][===========================================>      ][6.897MB/s]  [408MB/455MB][ 89%][============================================>     ][6.915MB/s]  [416MB/455MB][ 91%][=============================================>    ][6.82MB/s]  [424MB/455MB][ 93%][==============================================>   ][6.839MB/s]  [432MB/455MB][ 94%][===============================================>  ][6.857MB/s]  [440MB/455MB][ 96%][================================================> ][6.875MB/s]  [448MB/455MB][ 98%][=================================================>][6.892MB/s]  [455MB/455MB][100%][==================================================][6.894MB/s]  [455MB/455MB][100%][==================================================][6.894MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_12809/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_12809/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
